Fix white space issue with counter component [stage-8] (#1407)

--- a/web/scss/sections/components/counter.scss
+++ b/web/scss/sections/components/counter.scss
@@ -22,4 +22,8 @@
     margin-right: -1px;
     fill: $white;
   }
+
+  .radio {
+    margin-bottom: 5px;
+  }
 }
